feat(AuthController): adicionado cpf, dateOfBirth, address no register